# dupe-sweeper

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  RELEASES.md
src/dupe_sweeper/: models.py
src/dupe_sweeper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dupe_sweeper/cli/: main.py
src/dupe_sweeper/engine/: actions.py  cache.py  hashing.py  matcher.py  scanner.py
src/dupe_sweeper/engine/cache/: __init__.py  base.py  json_cache.py  sqlite_cache.py
tests/: test_matcher.py  test_sqlite_cache.py
